# assembly-design-bridge

./: .gitignore  README.md  pom.xml
cdb-clojure/: README
cdb-clojure/src/meta_cdb/: core.clj
cdb-clojure/test/meta_cdb/test/: core.clj
cdb-cpp/: .project  Fakefile  Makefile  bar.cpp  foo.cpp
cdb-cpp/src/: BridgeClient.cc  BridgeClient.h  CMakeLists.txt  CdbMsg.pb.cc  CdbMsg.pb.h  Frame.h  FramedEdit.cc  FramedMessage.h  FramedPayload.cc  FramedPayload.h  XsdTypes.pb.cc  XsdTypes.pb.h  the-lift.cc  the-lift.cpp
cdb-csharp/: CdbMsg.cs
cdb-java/: .gitignore  pom.xml
cdb-java/cdb-java-client/: pom.xml
cdb-java/cdb-java-library/: pom.xml
cdb-java/cdb-java-server/: pom.xml
cdb-java/cdb-java-server/src/main/resources/: logback.xml
cdb-java/cdb-java-server/src/test/resources/: componentNameChange.hex
cdb-java/java-client/: pom.xml
cdb-java/java-client/src/main/java/edu.vanderbilt.isis.avm.meta.cdb.client/: AssemblyDesignBridgeClient.java  DesignMsgHandler.java
cdb-java/java-client/src/main/java/edu.vanderbilt.isis.meta.cdb.client/: AssemblyDesignBridgeClient.java  (+1 more)
cdb-java/java-library/: pom.xml
cdb-java/java-server/: pom.xml
cdb-java/java-server/script/: read-file.ps
cdb-java/java-server/src/test/resources/: Get-BytesFromHex.ps
cdb-java/meta-cdb-java/: pom.xml
cdb-java/meta-cdb-java/protobuf/: CdbMsg.proto
cdb-java/meta-cdb-java/script/: build-protobuf.sh
cdb-java/meta-cdb-java/src/main/resources/: logback.xml
cdb-java/protobuf/: AssemblyInterface.proto
cdb-java/script/: test.py
cdb-java/src/test/resources/: testinput
cdb-protobuf/: .gitignore  pom.xml
cdb-protobuf/cpp-proj/: pom.xml
cdb-protobuf/csharp-proj/: pom.xml
cdb-protobuf/java-proj/: pom.xml
cdb-protobuf/script/: build-cs.sh
cdb-protobuf/src/main/protobuf/: AssemblyInterface.cs  AssemblyInterface.proto  CdbMsg.cs  CdbMsg.proto  XsdTypes.cs
cdb-schema/: pom.xml
cdb-schema/src/main/protobuf/: XsdTypes.proto
cdb-schema/src/main/xsd/: AssemblyInterface.xsd
meta-bridge/: .gitignore  pom.xml
meta-bridge/java-client/: pom.xml
meta-bridge/java-library/: pom.xml
meta-bridge/java-server/: pom.xml
meta-bridge/java-server/src/main/resources/: logback.xml
meta-bridge/java-server/src/test/resources/: Convert-ByteArrayToString.ps  componentNameChange.hextxt
meta-link-creo/: .cproject  pom.xml
meta-link-creo/cmake-win32/: BUILD.me
meta-link-creo/src/: BridgeClient.cc  CMakeLists.txt  FramedEdit.cc  FramedEdit.h  meta-link-main.cc
meta-link-cyphy/: CdbMsg.cs
meta-link-test/: project.clj
meta-protobuf/: pom.xml
meta-protobuf/cpp-proj/: pom.xml
meta-protobuf/csharp-proj/: pom.xml
meta-protobuf/java-proj/: pom.xml
meta-protobuf/src/main/protobuf/: MetaLinkMsg.proto
scripts/ps1/: Invoke-BinaryProcess.ps1
(+39 files in other folders)
